Bug 355194 - "Local/POP3 'Rebuild Summary File' generates "error, exception, ..." in <widgetglue.js>" [r+sr=bienvenu]